--- a/main.tex
+++ b/main.tex
@@ -117,6 +117,7 @@
 \newcommand{\OS}[2]{\underline{\smash{#1}}_{#2}}
 \newcommand{\InternalHom}[1]{\operatorname{\underline{\smash{\CatOf{#1}}}}}
 \newcommand{\InternalAut}{\operatorname{\underline{\smash{\operatorname{Aut}}}}}
+\newcommand{\InternalEnd}{\operatorname{\underline{\smash{\operatorname{End}}}}}
 \newcommand{\sheaf}[1]{\mathcal{#1}}
 
 \newcommand{\Spin}{\mathit{Spin}}
