minor modifications to Lecture 2.6

--- a/quillen.tex
+++ b/quillen.tex
@@ -735,14 +735,14 @@ The coefficients of the formal group law span $MU_*$. \qed
 \end{corollary}
 
 \begin{remark}
-This proof actually also goes through from $MO$ as well.  In that case, it's even easier, since the characteristic of $MO$ forces $2 = 0$ and much of the algebra collapses.  One can try to further perturb this proof in two ways:
+This proof actually also goes through for $MO$ as well.  In that case, it's even easier, since the equation $2 = 0$ in $\pi_0 MO$ causes much of the algebra to collapse.  One can try to further perturb this proof in two ways:
 \begin{enumerate}
 \item One can try to replace the identity complex--orientation $MU \xrightarrow{\id} MU$ with a nontrivial complex--orientation $MU \xrightarrow{\phi} E$ which is suitably compatible with power operations.  It would be nice to understand why this doesn't give more information about $E$ than what's visible in the Hurewicz image of $\phi$.  Or, conversely, it would be nice to understand a proof of Mahowald's theorem that the free $E_2$--algebra with $p = 0$ is $H\F_p$, which this proof portends to give information about.\todo{Straighten this out.}
 \item One can also try to replace $MO$ and $MU$ with $MSp$ or $MSO$.  These, too, have presentations in terms of bordism theories and hence similar power operations to the ones we used above.  On the other hand, the Euler classes in $MSp$--theory, while simple, are not so well-behaved, because they are not controlled by a formal group law.  Characteristic classes in $MSO$--theory are not even simple.\todo{This isn't well-stated either.}
 \end{enumerate}
 \end{remark}
 
-We now have a foothold on $\pi_* MU$, and this alone is enough to move us to study $\moduli{fgl}$, the moduli scheme of formal group laws.  However, while we're here, it's possible for us to prove the rest of Quillen's theorem, if we get just slightly ahead of ourselves and assume one algebraic fact.  The place to start is with the following topological observation about mixing complex--orientations:
+We now have a foothold on $\pi_* MU$, and this alone is enough to move us to study $\moduli{fgl}$, the moduli scheme of formal group laws.  However, while we're here, it's possible for us to prove the rest of Quillen's theorem, if we get just slightly ahead of ourselves and assume one algebraic fact about $\sheaf O_{\moduli{fgl}}$.  The place to start is with the following topological observation about mixing complex--orientations:
 
 \begin{lemma}[{\cite[Lemma 6.3 and Corollary 6.5]{AdamsBlueBook}}]\label{OrientationsOnEAndMU}
 Let $\phi\co MU \to E$ be complex--oriented and consider the two orientations
@@ -752,7 +752,7 @@ MU \sm \S & \xrightarrow{\phi \sm \eta_{MU}} E \sm MU.
 \end{align*}
 The two induced coordinates $x^E$ and $x^{MU}$ on $\CP^\infty_{E \sm MU}$ are related by the formulas
 \begin{align*}
-x^{MU} & = \sum_{j=0}^\infty b_j^E (x^E)^j = g(x^E), &
+x^{MU} & = \sum_{j=0}^\infty b_j^E (x^E)^j = g(x^E), \\
 g^{-1}(x^{MU} +_{MU} y^{MU}) & = g^{-1}(x^E) +_E g^{-1}(y^E).
 \end{align*}
 where $E_* MU \cong E_*[b_1, b_2, \ldots]$.
@@ -772,7 +772,7 @@ allows us to pair $x^{MU}$ with $(x^E)^{j}$ to determine the coefficients of the
 In particular, for the orientation $MU \to H\Z$ we have \[x_1 +_{MU} x_2 = \exp^H(\log^H(x_1) + \log^H(x_2)),\] where $\exp^H(x) = \sum_{j=0}^\infty b_j x^{j+1}$. \qed
 \end{corollary}
 
-However, one also notes that $H\Z_* MU = \Z[b_1, b_2, \ldots]$ carries the universal example of a formal group law with a logarithm --- this observation is independent of any description of $MU_*$, which we still do not fully understand.  It turns out that this brings us one algebraic fact away from understanding $MU_*$:
+However, one also notes that $H\Z_* MU = \Z[b_1, b_2, \ldots]$ carries the universal example of a formal group law with a logarithm --- this observation is independent of any knowledge about $MU_*$.  It turns out that this brings us one step away from understanding $MU_*$:
 
 \begin{theorem}[{To be proven as \Cref{LazardsTheorem}}]\label{DummyLazardsThm}
 There is a ring $\sheaf O_{\moduli{fgl}}$ carrying the universal formal group law, and it is free: it is a polynomial ring over $\Z$ in countably many generators. \qed
