some thoughts about reorganizing Lectures 5.1-2

--- a/sigma.tex
+++ b/sigma.tex
@@ -11,25 +11,40 @@
 
 
 
-\section{Thom sheaves and duality}
+\section{Special divisors and $MSU$--orientations}
 
-\todo{A bunch of this stuff got moved into Lecture 2.3.}
+Recall the description of $MUP$--orientations as trivializations of a certain line bundle
 
-\begin{enumerate}
-\item If $V = (1 - \L)$ is the reduced canonical line bundle over $\CP^\infty$, then using all the above we have \[\ThomSheaf{V} \cong \pi^* 0^* \sheaf I (0) \otimes \sheaf I(0)^{-1} = \Theta^1(\sheaf I(0)),\] where $\pi: \G_E \to S_E$ is the structural map and $\Theta^1$ is the usual.
-\item Let $A$ be a finite abelian group.  An element $a \in A$ can be regarded as a character of $A^*$, and we let $V_a$ denote the associated line bundle over $BA^*$.  This gives a group homomorphism $\chi\co A \to \G(BA^*_E)$.  The line bundle $\ThomSheaf{V_a \otimes V \otimes \L}$ over $BA^*_E \times X_E \times \G$ is \[\ThomSheaf{V_a \otimes V \otimes \L} \cong T_a^* \sheaf I(D^{-1}),\] and taking $V$ to be the trivial line bundle over a point gives \[\ThomSheaf{V_a \otimes \L} \cong T_a^* \sheaf I(0) = \sheaf I(a^{-1}).\]
-\item Now let $V_{reg} = \bigoplus_{a \in A} V_a$ be the regular representation of $A^*$.  Over the scheme $(BA^*)_E \times \G$, the line bundle associated to the Thom complex of $V_{reg} \otimes V \otimes \L$ is \[\ThomSheaf{V_{reg} \otimes V \otimes \L} \cong \bigotimes_{a \in A} T_a^* \sheaf I(D^{-1}) \cong \sheaf I \left( \sum_{a \in A} T_a^* D^{-1} \right).\]  In particular, \[\ThomSheaf{V_{reg} \otimes \L} \cong \bigotimes_{a \in A} T_a \sheaf I(0) \cong \sheaf I(\chi).\]
-\item Suppose that the map \[\widetilde \chi\co (BA^*)_E \to \InternalHom{FormalGroups}(A, \G)\] is an isomorphism.  Given a level structure and cokernel pair \[A_T \xrightarrow{\ell} i^* \G \xrightarrow{q} \G',\] changing base along $T \times \G \xrightarrow{\chi_\ell} \InternalHom{FormalGroups}(A, \G) \times \G$ gives \[\chi_\ell^* \ThomSheaf{V_{reg} \otimes \L} \cong q^* N_q \sheaf I_{\G}(0) \cong q^* \sheaf I_{\G'}(0) \cong \sheaf I_{\G}(\ell).\]
-\item Restricting the above example to $BA^*$, we find \[\chi_\ell^* \ThomSheaf{V_{reg}} = 0_{\G}^* q^* \sheaf I_{\G'}(0) = 0_{\G'}^* \sheaf I_{\G'}(0) = \omega_{\G'}.\]
-\end{enumerate}
+Describe $MU$--orientations as trivializations of another line bundle
 
-\todo{Eqn 8.5 is nice and should appear in the Thom Sheaves section.  Item (8) in Section 8 has a nice interpretation of the splitting principle and lends some teeth to the phrase ``complex oriented descent''.}
+Describe $BSU_E$ in terms of $\SDiv_0 \G$
+
+Describe a splitting principle for $BSU$--bundles
+
+Produce an isomorphism $C_2 \G \to \SDiv_0 \G$
+
+Introduce coalgebraic formal schemes and deduce that $BSU_E \cong C_2 \G$ in good cases
+
+Describe $MSU$--orientations as trivializations of yet another line bundle
+
 
 ------
+
+% \begin{enumerate}
+% \item If $V = (1 - \L)$ is the reduced canonical line bundle over $\CP^\infty$, then using all the above we have \[\ThomSheaf{V} \cong \pi^* 0^* \sheaf I (0) \otimes \sheaf I(0)^{-1} = \Theta^1(\sheaf I(0)),\] where $\pi: \G_E \to S_E$ is the structural map and $\Theta^1$ is the usual.
+% \item Let $A$ be a finite abelian group.  An element $a \in A$ can be regarded as a character of $A^*$, and we let $V_a$ denote the associated line bundle over $BA^*$.  This gives a group homomorphism $\chi\co A \to \G(BA^*_E)$.  The line bundle $\ThomSheaf{V_a \otimes V \otimes \L}$ over $BA^*_E \times X_E \times \G$ is \[\ThomSheaf{V_a \otimes V \otimes \L} \cong T_a^* \sheaf I(D^{-1}),\] and taking $V$ to be the trivial line bundle over a point gives \[\ThomSheaf{V_a \otimes \L} \cong T_a^* \sheaf I(0) = \sheaf I(a^{-1}).\]
+% \item Now let $V_{reg} = \bigoplus_{a \in A} V_a$ be the regular representation of $A^*$.  Over the scheme $(BA^*)_E \times \G$, the line bundle associated to the Thom complex of $V_{reg} \otimes V \otimes \L$ is \[\ThomSheaf{V_{reg} \otimes V \otimes \L} \cong \bigotimes_{a \in A} T_a^* \sheaf I(D^{-1}) \cong \sheaf I \left( \sum_{a \in A} T_a^* D^{-1} \right).\]  In particular, \[\ThomSheaf{V_{reg} \otimes \L} \cong \bigotimes_{a \in A} T_a \sheaf I(0) \cong \sheaf I(\chi).\]
+% \item Suppose that the map \[\widetilde \chi\co (BA^*)_E \to \InternalHom{FormalGroups}(A, \G)\] is an isomorphism.  Given a level structure and cokernel pair \[A_T \xrightarrow{\ell} i^* \G \xrightarrow{q} \G',\] changing base along $T \times \G \xrightarrow{\chi_\ell} \InternalHom{FormalGroups}(A, \G) \times \G$ gives \[\chi_\ell^* \ThomSheaf{V_{reg} \otimes \L} \cong q^* N_q \sheaf I_{\G}(0) \cong q^* \sheaf I_{\G'}(0) \cong \sheaf I_{\G}(\ell).\]
+% \item Restricting the above example to $BA^*$, we find \[\chi_\ell^* \ThomSheaf{V_{reg}} = 0_{\G}^* q^* \sheaf I_{\G'}(0) = 0_{\G'}^* \sheaf I_{\G'}(0) = \omega_{\G'}.\]
+% \end{enumerate}
+
+% \todo{Eqn 8.5 is nice and should appear in the Thom Sheaves section.  Item (8) in Section 8 has a nice interpretation of the splitting principle and lends some teeth to the phrase ``complex oriented descent''.}
 
 % \begin{definition}
 % For a divisor $D$ on a curve $C$ over $X$ with pointing $\zeta: X \to C$, set the \textit{Thom sheaf} of $D$ to be the line bundle $L(D) = \zeta^* J(D)$ over $X$, with $J(D)$ the ideal sheaf on $C$ defining $D$.  It satisfies $L(D + D') = L(D) \otimes L(D')$.  If $C$ has a coordinate $x$, then $J(D)$ has a generator $f_D(x)$ and $L(D)$ also has a generator $u_D$, called the \textit{Thom class}.  It satisfies $u_{D + D'} = u_D \otimes u_{D'}$.
 % \end{definition}
+
+------
 
 As a warm-up to this Case Study, we will use these ideas to study the available complex orientations of a given complex-orientable theory, i.e., the collection of ring maps $MUP \to E$.  \emph{All} maps of spectra $MUP \to E$ are better known as $E^0 MUP$, but (as noted previously in these notes) this suffers from a serious problem: it forms an $E_*$--module rather than an $E_*$--algebra, so we cannot form a scheme from it to pursue a geometric analysis.  We have circumvented this in the past by settling for the ring $E_* MUP$ instead, and this approach will also serve us well now.
 
@@ -94,7 +109,23 @@ Is it possible to give an example of a complex-oriented theory which receives an
 
 
 
+
+
 \section{Elliptic curves and $\theta$--functions}
+
+The complex Weierstrass functions: $\wp$, $\wp'$, $\zeta$, and $\sigma$.  Weierstrass presentation as coming from the differential equation.
+
+Exponentiate and consider the $\theta$--function, as well as its translates.  Note both the projective embedding (which is distinct!) and the relation to Weierstrass's $\zeta$ function.
+
+Every abelian variety is projective.  Remark that this rests on the Theorems of the Cube and of the Square.  In fact, every abelian variety has a theory of $\theta$--functions, which give a particularly nice embedding, associated to a $\Theta^3$--structure on a totally symmetric ample line bundle.  (Say what the Weil pairing is good for: detecting nontrivial $\Theta^3$--structures, at least.)
+
+Analyze the integral Tate curve.
+
+
+
+
+
+
 
 \todo{Be sure to mention Weil pairings today as well as $\Theta^k$--structures, since you'll need both tomorrow.}
 
@@ -151,7 +182,11 @@ The theorem of the cube: $\Theta^3 \L$ is canonically trivial for any rigidified
 
 $\Theta$--structures and symmetric biextensions
 
-Weil pairings: checks how far some extension is from being commutative. You can see this in Olsson 3.11 or Mumford's \textit{Abelian varieties} p.\ 222.
+------
+
+Take $S = \Spec \bar k$, let $E/S$ be an elliptic curve, and let $\L = \sheaf O_E(ne)$ for an integer $n \ge 1$.  Then for a point $a \in E(\bar k)$ \[t_a^* \L \otimes \L^{-1} \simeq \sheaf O_E(n(-a) -n(e))\] which is trivial if and only if $na = e$, hence $K_{(E, \L)} \cong E[n]$.  The $\Theta$--group $\sheaf G_{(E, \L)}$ consists of the set of points $(a, f)$ where $a \in E[n]$ and $f \in \bar k(E)$ is a function with $\div(f) = n(-a) - n(e)$.  There is a natural antisymmetric pairing, called the Weil pairing, coming from the central extension \[1 \to \Gm \to \sheaf G_{(E, \L)} \to E[n] \to 1.\]
+
+(See Olsson 3.5, 3.11.  You can also see Mumford's \textit{Abelian varieties} p.\ 222.)
 
 -----
 
@@ -198,8 +233,8 @@ x_3 & = \theta_\tau^{1/2, 1/2}(2z)
 \end{align*}
 and
 \begin{align*}
-A & = \theta_\tau^{0, 0}(0) = \sum_n q^{n^2}, \\
-B & = \theta_\tau^{0, 1/2}(0) = \sum_n (-1)^n q^{n^2}, \\
+A & = \theta_\tau^{0, 0}(0) = \sum_n q^{n^2}, &
+B & = \theta_\tau^{0, 1/2}(0) = \sum_n (-1)^n q^{n^2}, &
 C & = \theta_\tau^{1/2, 0}(0) = \sum_n q^{(n + 1/2)^2}
 \end{align*}
 upon which there is the additional ``Jacobi'' relation \[A^4 = B^4 + C^4.\]
