--- a/main.tex
+++ b/main.tex
@@ -4,6 +4,7 @@
 % \usepackage{savetrees}
 \usepackage{amsmath,amssymb,amsfonts,amsthm,stmaryrd}
 \usepackage{hyperref}
+\usepackage{sseqpages/sseqpages}
 %\usepackage{stmaryrd}
 %\usepackage{MnSymbol}
 
