a couple more typos from class

--- a/quillen.tex
+++ b/quillen.tex
@@ -752,7 +752,7 @@ MU \sm \S & \xrightarrow{\phi \sm \eta_{MU}} E \sm MU.
 \end{align*}
 The two induced coordinates $x^E$ and $x^{MU}$ on $\CP^\infty_{E \sm MU}$ are related by the formulas
 \begin{align*}
-x^{MU} & = \sum_{j=0}^\infty b_j^E (x^E)^j = g(x^E), \\
+x^{MU} & = \sum_{j=0}^\infty b_j^E (x^E)^{j+1} = g(x^E), \\
 g^{-1}(x^{MU} +_{MU} y^{MU}) & = g^{-1}(x^E) +_E g^{-1}(y^E).
 \end{align*}
 where $E_* MU \cong E_*[b_1, b_2, \ldots]$.
@@ -765,7 +765,7 @@ The second formula is a direct consequence of the first.  The first formula come
 & \CatOf{Modules}_{E_*}(E_* \CP^\infty, E_* MU)
 \end{tikzcd}
 \end{center}
-allows us to pair $x^{MU}$ with $(x^E)^{j}$ to determine the coefficients of the series.
+allows us to pair $x^{MU}$ with $(x^E)^{j+1}$ to determine the coefficients of the series.
 \end{proof}
 
 \begin{corollary}[{\cite[Corollary 6.6]{AdamsBlueBook}}]
@@ -786,7 +786,7 @@ We proved in \Cref{QuillenSurjective} that this map is surjective.  We also prov
 \end{proof}
 
 \begin{corollary}
-The ring $\pi_*(MU \sm MU)$ carries the universal example of two isomorphic formal group laws.
+The ring $\pi_*(MU \sm MU)$ carries the universal example of two strictly isomorphic formal group laws.  Additionally, the ring $\pi_0 (MUP \sm MUP)$ carries the universal example of two isomorphic formal group laws.
 \end{corollary}
 \begin{proof}
 Combine \Cref{OrientationsOnEAndMU} and \Cref{QuillensTheorem}.
