--- a/quillen.tex
+++ b/quillen.tex
@@ -644,7 +644,7 @@ The submanifolds $Y$ and $Z$ intersect transversally exactly when $F = 0$.
 The proof of the following Lemma is fairly easy, but geometric, so we omit it.
 
 \begin{lemma}[{\cite[Proposition 3.3]{Quillen}}]\label{CleanIntersectionFormula}
-Suppose that $\nu_{i'}$, $\nu_i$, and $F$ are endowed with complex structures compatible with this exact sequence. For $z \in MU^*(Z)$, \[j^* i_* z = i'_*(e(F) \cdot (j')^* z)\] in $MU^{*+a}(Y, Y \setminus W)$, where $a = \dim \nu_i$. \qed
+Suppose that $\nu_{i'}$, $\nu_i$, and $F$ are endowed with complex structures compatible with this exact sequence. For $z \in MU^*(Z)$, \[j^* i_* z = i'_*(e(F) \cdot (j')^* z)\] in $MU^{*+a}(Y, Y \setminus W)$, where $a = \dim \nu_i$. \todo{Mention what $e(F)$ is (the Euler class of $F$, right?)} \qed
 \end{lemma}
 
 Now let $G$ be a finite group and let $i\co Z \to X$ be an embedding of $G$--manifolds. Then the $G$--fixed submanifold $X^G$ and $Z$ intersect cleanly in the diagram
