--- a/sigma.tex
+++ b/sigma.tex
@@ -113,7 +113,69 @@ Is it possible to give an example of a complex-oriented theory which receives an
 
 \section{Elliptic curves and $\theta$--functions}
 
-The complex Weierstrass functions: $\wp$, $\wp'$, $\zeta$, and $\sigma$.  Weierstrass presentation as coming from the differential equation.
+Today will constitute something of a r\'esum\'e on elliptic curves.  We'll hardly prove anything, and we also won't cover many topics that a sane introduction to elliptic curves would make a point to cover.  Instead, we'll try to restrict attention to those concepts which will be of immediate use to us in the coming couple of lectures.
+
+To begin with, recall that an elliptic curve in the complex setting is a torus, and it admits a presentation by selecting a lattice $\Lambda$ of full rank in $\C$ and forming the quotient \[\C \xrightarrow{\pi_\Lambda} E_\Lambda = \C / \Lambda.\]  The meromorphic functions $f$ on $E_\Lambda$ pull back to give meromorphic functions $\pi_\Lambda^* f$ on $\C$ satisfying a periodicity constraint in the form of the functional equation \[\pi_\Lambda^* f(z + \Lambda) = \pi_\Lambda^* f(z).\]  From this, it follows that there are no holomorphic such functions, save the constants --- such a function would be bounded, and Liouville's theorem would apply.  It is, however, possible to build the following meromorphic special function, which has poles of order $2$ at the lattice points: \[\wp_\Lambda(z) = \frac{1}{z^2} + \sum_{\omega \in \Lambda \setminus \{0\}} \frac{1}{(z - \omega)^2} - \frac{1}{\omega^2}.\]  Its derivative is also a meromorphic function satisfying the periodicity constraint: \[\wp_\Lambda'(z) = -2 \sum_{\omega \in \Lambda} \frac{1}{(z - \omega)^3}.\]  In fact, these two functions generate all other meromorphic functions on $E_\Lambda$, in the sense that the subsheaf spanned by the algebra generators $\wp_\Lambda$ and $\wp_\Lambda'$ is exactly $\pi_\Lambda^* \sheaf M_{E_\Lambda}$.  This algebra is subject to the following relation, in the form of a differential equation: \[\wp_\Lambda'(z)^2 = 4 \wp_\Lambda(z)^3 - g_2(\Lambda) \wp_\Lambda(z) - g_3(\Lambda),\] for some special values $g_2(\Lambda)$ and $g_3(\Lambda)$.  Accordingly, writing $C \subseteq \CP^2$ for the projective curve $wy^2 = 4x^3 - g_2(\Lambda) w^2 x - g_3(\Lambda) w^3$, there is an analytic group isomorphism
+\begin{align*}
+E_\Lambda & \to C, \\
+z \mod \Lambda & \mapsto (1, \wp_\Lambda(z), \wp_\Lambda'(z)).
+\end{align*}
+This is sometimes referred to as the Weierstrass presentation of $E_\Lambda$.
+
+\textbf{Lead into this in a smarter way.} Another special function of interest is $\zeta_\Lambda$ with $\zeta_\Lambda' = -\wp_\Lambda$.  It takes the form \[\zeta_\Lambda(z) = \frac{1}{z} + \sum_{\omega \in \Lambda \setminus \{0\}} \frac{1}{z - \omega} + \frac{1}{\omega} + \frac{z}{\omega^2}.\]  It is itself the logarithmic derivative of another special function $\sigma_\Lambda$: \[\zeta_\Lambda = \frac{\sigma_\Lambda'}{\sigma_\Lambda} = \frac{d}{dz} \log \sigma_\Lambda,\] and any elliptic function can be written in the form $c \cdot \prod_{i=1}^n \frac{\sigma(z - a_i)}{\sigma(z - b_i)}$.
+
+With logarithms running around, one might be led to consider the exponential setting.  The normalized exponential function \[\C \xrightarrow{z \mapsto \exp(2 \pi i z)} \C^\times\] already has $\Z$ as its kernel.  Picking a basis for the lattice $\Lambda$, one basis vector can be rescaled to $1$ and the other rescaled basis vector we write as $\tau$.  There is, again, an analytic isomorphism \[E_\Lambda \xrightarrow{z \mapsto \exp(2 \pi i z)} \C^\times / q,\] where $q = \exp(2 \pi i \tau)$ is the image of the other lattice vector.  In fact, $\tau$ can be chosen \textbf{This is just in the upper half-plane, right?} so that $q$ satisfies the norm inequality $0 < |q| < 1$.
+
+
+
+
+------
+
+
+Define $\theta$ as \[\theta_\tau(z) = \sum_{n \in \Z} e^{2 \pi i n z + \pi i n^2 \tau}.\]  Then $\theta_\tau(z) = \theta_\tau(-z)$ and \[\theta_\tau(z + a \tau + b) = e^{-\pi i a^2 \tau - 2 \pi i a z} \theta_\tau(z),\] so that $\theta_\tau$ is periodic against $1$ and quasiperiodic against $\tau$.  It has no poles and its lone zero is at $1/2 + \tau/2$, the center of the fundamental parallelogram.  Using this, we define auxiliary $\theta$ functions for each choice of rationals $a$ and $b$: \[\theta_\tau^{a,b}(z) = e^{\pi i a^2 \tau + 2 \pi i a (z + b)} \theta_\tau(z + a \tau + b).\]  For any $N > 0$, we define $V_\tau[N]$ to be the space of entire functions $f$ with $f(z + N) = f(z)$ and $f(z + \tau) = e^{-2 \pi i N z - \pi i N^2 \tau} f(z)$.  Then $V_\tau[N]$ has $\C$--dimension $N^2$ and $\theta_\tau^{a, b}$ give a basis by picking representatives $(a_i, b_i)$ of the classes in $((1/N)\Z / \Z)^2$.  We build a map
+\begin{align*}
+\C / N(\Z \tau + \Z) & \to \P^{N^2-1}(\C), \\
+z & \mapsto [\cdots : \theta_\tau^{a_i, b_i}(z) : \cdots].
+\end{align*}
+For $N > 1$, it is an embedding.
+
+One can work out how it goes for $N = 2$: the four functions there are
+\begin{align*}
+\theta_\tau^{0, 0}(z) & = \theta_\tau(z), & \mathrm{zeroes} & = \frac{\tau + 1}{2} + L_\tau, \\
+\theta_\tau^{0, 1/2}(z) & = \theta_\tau(z + 1/2), & \mathrm{zeroes} & = \frac{\tau}{2} + L_\tau, \\
+\theta_\tau^{1/2, 0}(z) & = e^{\frac{1}{4} \pi i \tau + \pi i z} \theta_\tau(z + \tau/2), & \mathrm{zeroes} & = \frac{1}{2} + L_\tau, \\
+\theta_\tau^{1/2, 1/2}(z) & = e^{\frac{1}{4} \pi i \tau + \pi i (z + \frac{1}{4})} \theta_\tau\left(z + \frac{\tau + 1}{2}\right), & \mathrm{zeroes} & = L_\tau.
+\end{align*}
+The image of $f_{(2)}$ in $\P^{2^2 - 1}(\C)$ is cut out by the equations
+\begin{align*}
+A^2 x_0^2 & = B^2 x_1^2 + C^2 x_2^2, \\
+A^2 x_3^2 & = C^2 x_1^2 - B^2 x_2^2,
+\end{align*}
+where
+\begin{align*}
+x_0 & = \theta_\tau^{0, 0}(2z), &
+x_1 & = \theta_\tau^{0, 1/2}(2z), \\
+x_2 & = \theta_\tau^{1/2, 0}(2z), &
+x_3 & = \theta_\tau^{1/2, 1/2}(2z)
+\end{align*}
+and
+\begin{align*}
+A & = \theta_\tau^{0, 0}(0) = \sum_n q^{n^2}, &
+B & = \theta_\tau^{0, 1/2}(0) = \sum_n (-1)^n q^{n^2}, &
+C & = \theta_\tau^{1/2, 0}(0) = \sum_n q^{(n + 1/2)^2}
+\end{align*}
+upon which there is the additional ``Jacobi'' relation \[A^4 = B^4 + C^4.\]
+
+In fact, the second derivative of the logarithm of $\theta_\tau^{1/2, 1/2}$ gives $\wp$, so the logarithmic derivative of $\theta_\tau^{1/2,1/2}$ is the Weierstrass $\zeta$--function.  It follows that $\theta_\tau^{1/2,1/2}$ is ``essentially'' the same as $\sigma$.
+
+What's left to copy over is in sections 10.5-6 of Husemoller's \textit{Elliptic curves}.
+
+
+
+
+
+
+-------
 
 Exponentiate and consider the $\theta$--function, as well as its translates.  Note both the projective embedding (which is distinct!) and the relation to Weierstrass's $\zeta$ function.
 
@@ -187,61 +249,6 @@ $\Theta$--structures and symmetric biextensions
 Take $S = \Spec \bar k$, let $E/S$ be an elliptic curve, and let $\L = \sheaf O_E(ne)$ for an integer $n \ge 1$.  Then for a point $a \in E(\bar k)$ \[t_a^* \L \otimes \L^{-1} \simeq \sheaf O_E(n(-a) -n(e))\] which is trivial if and only if $na = e$, hence $K_{(E, \L)} \cong E[n]$.  The $\Theta$--group $\sheaf G_{(E, \L)}$ consists of the set of points $(a, f)$ where $a \in E[n]$ and $f \in \bar k(E)$ is a function with $\div(f) = n(-a) - n(e)$.  There is a natural antisymmetric pairing, called the Weil pairing, coming from the central extension \[1 \to \Gm \to \sheaf G_{(E, \L)} \to E[n] \to 1.\]
 
 (See Olsson 3.5, 3.11.  You can also see Mumford's \textit{Abelian varieties} p.\ 222.)
-
------
-
-Some special function stuff:
-
-\[\wp_L(z) = \frac{1}{z^2} + \sum_{\omega \in L \setminus \{0\}} \frac{1}{(z - \omega)^2} - \frac{1}{\omega^2}.\]
-\[\zeta_L(z) = \frac{1}{z} + \sum_{\omega \in L \setminus \{0\}} \frac{1}{z - \omega} + \frac{1}{\omega} + \frac{z}{\omega^2}.\]
-\[\wp_L'(z) = -2 \sum_{\omega \in L \setminus \{0\}} \frac{1}{(z - \omega)^3}.\]
-$\zeta' = -\wp$.  $\wp$ is elliptic, and in fact the field of elliptic functions on $\C / L$ is spanned by $\wp$ (the even elliptic function) and $\wp'$ (the odd elliptic function) over the constants.
-
-There is a function $\sigma$ with \[\zeta = \frac{\sigma'}{\sigma} = \frac{d}{dz} \log \sigma.\]  Any elliptic function can be written as $c \cdot \prod_{i=1}^n \frac{\sigma(z - a_i)}{\sigma(z - b_i)}$.
-
-There is a differential equation \[\wp_L'(z)^2 = 4 \wp_L(z)^3 - g_2(L) \wp_L(z) - g_3(L)\] for constants $g_2(L)$ and $g_3(L)$.  Accordingly, let $E$ be the elliptic curve with homogeneous equation $wy^2 = 4x^3 - g_2(L) w^2 x - g_3(L) w^3$; then there is an analytic group isomorphism
-\begin{align*}
-\C / L & \to E(\C), \\
-z \mod L & \mapsto (1, \wp_L(z), \wp_L'(z)).
-\end{align*}
-
-Now exponentiate, so that $\C / L$ is replaced by $\C^\times / q^{\Z}$ for some $0 < |q| < 1$ and $q = e^{2 \pi i \tau}$.  Define $\theta$ as \[\theta_\tau(z) = \sum_{n \in \Z} e^{2 \pi i n z + \pi i n^2 \tau}.\]  Then $\theta_\tau(z) = \theta_\tau(-z)$ and \[\theta_\tau(z + a \tau + b) = e^{-\pi i a^2 \tau - 2 \pi i a z} \theta_\tau(z),\] so that $\theta_\tau$ is periodic against $1$ and quasiperiodic against $\tau$.  It has no poles and its lone zero is at $1/2 + \tau/2$, the center of the fundamental parallelogram.  Using this, we define auxiliary $\theta$ functions for each choice of rationals $a$ and $b$: \[\theta_\tau^{a,b}(z) = e^{\pi i a^2 \tau + 2 \pi i a (z + b)} \theta_\tau(z + a \tau + b).\]  For any $N > 0$, we define $V_\tau[N]$ to be the space of entire functions $f$ with $f(z + N) = f(z)$ and $f(z + \tau) = e^{-2 \pi i N z - \pi i N^2 \tau} f(z)$.  Then $V_\tau[N]$ has $\C$--dimension $N^2$ and $\theta_\tau^{a, b}$ give a basis by picking representatives $(a_i, b_i)$ of the classes in $((1/N)\Z / \Z)^2$.  We build a map
-\begin{align*}
-\C / N(\Z \tau + \Z) & \to \P^{N^2-1}(\C), \\
-z & \mapsto [\cdots : \theta_\tau^{a_i, b_i}(z) : \cdots].
-\end{align*}
-For $N > 1$, it is an embedding.
-
-One can work out how it goes for $N = 2$: the four functions there are
-\begin{align*}
-\theta_\tau^{0, 0}(z) & = \theta_\tau(z), & \mathrm{zeroes} & = \frac{\tau + 1}{2} + L_\tau, \\
-\theta_\tau^{0, 1/2}(z) & = \theta_\tau(z + 1/2), & \mathrm{zeroes} & = \frac{\tau}{2} + L_\tau, \\
-\theta_\tau^{1/2, 0}(z) & = e^{\frac{1}{4} \pi i \tau + \pi i z} \theta_\tau(z + \tau/2), & \mathrm{zeroes} & = \frac{1}{2} + L_\tau, \\
-\theta_\tau^{1/2, 1/2}(z) & = e^{\frac{1}{4} \pi i \tau + \pi i (z + \frac{1}{4})} \theta_\tau\left(z + \frac{\tau + 1}{2}\right), & \mathrm{zeroes} & = L_\tau.
-\end{align*}
-The image of $f_{(2)}$ in $\P^{2^2 - 1}(\C)$ is cut out by the equations
-\begin{align*}
-A^2 x_0^2 & = B^2 x_1^2 + C^2 x_2^2, \\
-A^2 x_3^2 & = C^2 x_1^2 - B^2 x_2^2,
-\end{align*}
-where
-\begin{align*}
-x_0 & = \theta_\tau^{0, 0}(2z), &
-x_1 & = \theta_\tau^{0, 1/2}(2z), \\
-x_2 & = \theta_\tau^{1/2, 0}(2z), &
-x_3 & = \theta_\tau^{1/2, 1/2}(2z)
-\end{align*}
-and
-\begin{align*}
-A & = \theta_\tau^{0, 0}(0) = \sum_n q^{n^2}, &
-B & = \theta_\tau^{0, 1/2}(0) = \sum_n (-1)^n q^{n^2}, &
-C & = \theta_\tau^{1/2, 0}(0) = \sum_n q^{(n + 1/2)^2}
-\end{align*}
-upon which there is the additional ``Jacobi'' relation \[A^4 = B^4 + C^4.\]
-
-In fact, the second derivative of the logarithm of $\theta_\tau^{1/2, 1/2}$ gives $\wp$, so the logarithmic derivative of $\theta_\tau^{1/2,1/2}$ is the Weierstrass $\zeta$--function.  It follows that $\theta_\tau^{1/2,1/2}$ is ``essentially'' the same as $\sigma$.
-
-What's left to copy over is in sections 10.5-6 of Husemoller's \textit{Elliptic curves}.
 
 -------
 
