--- a/mo.tex
+++ b/mo.tex
@@ -172,7 +172,7 @@ The functor $\mathbb A^1$ introduced above is naturally valued in groups: since 
 \mathbb G_a & \xrightarrow{\chi} \mathbb G_a & -x & \mapsfrom x, \\
 \Spec \F_2 & \xrightarrow{\eta} \mathbb G_a & 0 & \mapsfrom x.
 \end{align*}
-\todo{I think you explained this differently in class, so I wanted to work out how to use the Yoneda lemma to deduce these.  The idea is that we want a map, e.g., $\mu \in \mathrm{Nat}(\mathbb A^1 \times \mathbb A^1, \mathbb A^1)$.  The functors involved are corepresented, so this is just $\mathrm{Nat}(h^{\mathbb{F}_2[x_1,x_2]},h^{\mathbb{F}_2[x]})$.  The Yoneda lemma says that this is the same as an algebra map $\mathbb{F}_2[x] \rightarrow \mathbb{F}_2[x_1,x_2]$, which is obtained by evaluating the natural transformation at the identity of $\mathbb{F}_2[x_1,x_2]$.  The identity map of $\mathbb{F}_2[x_1,x_2]$ corresponds to the pair of elements $x_1, x_2$ in $\mathbb{F}_2[x_1,x_2]$, which gets sent to $x_1 + x_2$.  So the algebra homomorphism we want sends $x$ to $x_1 + x_2$.} 
+\todo{I think you explained this differently in class, so I wanted to work out how to use the Yoneda lemma to deduce these.  The idea is that we want a map, e.g., $\mu \in \mathrm{Nat}(\mathbb A^1 \times \mathbb A^1, \mathbb A^1)$.  The functors involved are corepresented, so this is just $\mathrm{Nat}(h^{\mathbb{F}_2[x_1,x_2]},h^{\mathbb{F}_2[x]})$.  The Yoneda lemma says that this is the same as an algebra map $\mathbb{F}_2[x] \rightarrow \mathbb{F}_2[x_1,x_2]$, which is obtained by evaluating the natural transformation at the identity of $\mathbb{F}_2[x_1,x_2]$.  The identity map of $\mathbb{F}_2[x_1,x_2]$ corresponds to the pair of elements $x_1, x_2$ in $\mathbb{F}_2[x_1,x_2]$, which gets sent to $x_1 + x_2$.  So the algebra homomorphism we want sends $x$ to $x_1 + x_2$.}
 \end{example}
 
 \begin{remark}
@@ -515,90 +515,13 @@ Consider the degenerate case $X = H\F_2$.  Then $H\F_{2*}(H\F_2) = \mathcal A_*$
 
 \begin{example}
 At the other extreme, we can pick the extremely nondegenerate case $X = \S$, pictured through a range in \Cref{HF2ASSFigure}.\todo{Label elements?  Identify some groups?}
+\begin{landscape}
 \begin{figure}[b]
-\begin{center}
-\begin{sseqdata}[
-    execute at begin node=$,execute at end node=$,
-    degree={-1}{#1},
-    classes={circle,fill,inner sep=0.3ex},
-    class labels={above left=0.2em, black},
-    edge labels=description,
-]{adamsSS}
+\input{sseqpages/ass.tex}
 
-\gdef\tower[#1]#2{
-    \begin{scope}[#1]
-    \place(0,0)
-    \foreach \y in {2,...,#2} {
-        \place(0, \y-1)
-        \structline(0, \y-2, -1)(0, \y-1, -1)
-    }
-    \end{scope}
-}
-
-\gdef\etaclass(#1,#2){
-    \place(#1,#2)
-    \structline(#1-1,#2-1,-1)(#1,#2,-1)
-}
-
-\place(0,0)
-
-% h0 tower
-\foreach \y in {1,...,12} {
-    \place(0,\y)
-    \structline(0,\y-1)(0,\y)
-}
-
-% multiples of eta
-\place["\eta"](1,1) \structline(0,0)(1,1)
-\place["\eta^2"](2,2) \structline(1,1)(2,2)
-\place["\eta^3"](3,3) \structline(2,2)(3,3)
-
-% divisibilities of nu
-\place(3,2) \structline(3,2)(3,3)
-\place(3,1) \structline(3,1)(3,2)
-
-\place(6,2)
-
-\tower[xshift=7,yshift=1]{4}
-
-\etaclass(8,2)
-\place(8,3)
-
-\etaclass(9,3)
-\etaclass(9,4)
-\place(9,5)
-
-\etaclass(10,6)
-\etaclass(11,7)
-\place(11,6) \structline(11,6)(11,7)
-\place(11,5) \structline(11,5)(11,6)
-
-\tower[xshift=14,yshift=2]{2}
-\tower[xshift=14,yshift=4]{3}
-\tower[xshift=15,yshift=1]{8}
-
-\etaclass(16,2)
-\etaclass(17,3)
-
-\place(16,6)
-\place(16,7)
-
-\tower[xshift=17,yshift=4]{3}
-\etaclass(17,7) \structline(17,7)(17,6)
-\etaclass(17,8)
-\place(17,9)
-
-\d2(15,1)
-\d3(15,2)
-\d3(15,3)
-\d2(17,4)
-
-\end{sseqdata}
-
-\printpage[name=adamsSS,page=0,struct lines=blue,struct line labels={text=black}]
-\end{center}
 \caption{A small piece of the $H\F_2$-Adams spectral sequence for the sphere, beginning at the second page.  North and north-east lines denote multiplication by $2$ and by $\eta$, north-west lines denote $d_2$-- and $d_3$--differentials.}\label{HF2ASSFigure}
 \end{figure}
+\end{landscape}
 \end{example}
 
 \todo{Jon asked: spectral sequences coming from $\pi_*$ of a Tot tower increase Tot degree. ANSS differentials decrease degree: they run against the multiplicative structure in pictures. What's going on with this?  I think this is a duality effect: working with the Steenrod algebra versus its dual.}
