--- a/sigma.tex
+++ b/sigma.tex
@@ -118,27 +118,30 @@ Today will constitute something of a r\'esum\'e on elliptic curves.  We'll hardl
 To begin with, recall that an elliptic curve in the complex setting is a torus, and it admits a presentation by selecting a lattice $\Lambda$ of full rank in $\C$ and forming the quotient \[\C \xrightarrow{\pi_\Lambda} E_\Lambda = \C / \Lambda.\]  The meromorphic functions $f$ on $E_\Lambda$ pull back to give meromorphic functions $\pi_\Lambda^* f$ on $\C$ satisfying a periodicity constraint in the form of the functional equation \[\pi_\Lambda^* f(z + \Lambda) = \pi_\Lambda^* f(z).\]  From this, it follows that there are no holomorphic such functions, save the constants --- such a function would be bounded, and Liouville's theorem would apply.  It is, however, possible to build the following meromorphic special function, which has poles of order $2$ at the lattice points: \[\wp_\Lambda(z) = \frac{1}{z^2} + \sum_{\omega \in \Lambda \setminus \{0\}} \frac{1}{(z - \omega)^2} - \frac{1}{\omega^2}.\]  Its derivative is also a meromorphic function satisfying the periodicity constraint: \[\wp_\Lambda'(z) = -2 \sum_{\omega \in \Lambda} \frac{1}{(z - \omega)^3}.\]  In fact, these two functions generate all other meromorphic functions on $E_\Lambda$, in the sense that the subsheaf spanned by the algebra generators $\wp_\Lambda$ and $\wp_\Lambda'$ is exactly $\pi_\Lambda^* \sheaf M_{E_\Lambda}$.  This algebra is subject to the following relation, in the form of a differential equation: \[\wp_\Lambda'(z)^2 = 4 \wp_\Lambda(z)^3 - g_2(\Lambda) \wp_\Lambda(z) - g_3(\Lambda),\] for some special values $g_2(\Lambda)$ and $g_3(\Lambda)$.  Accordingly, writing $C \subseteq \CP^2$ for the projective curve $wy^2 = 4x^3 - g_2(\Lambda) w^2 x - g_3(\Lambda) w^3$, there is an analytic group isomorphism
 \begin{align*}
 E_\Lambda & \to C, \\
-z \mod \Lambda & \mapsto (1, \wp_\Lambda(z), \wp_\Lambda'(z)).
+z \pmod \Lambda & \mapsto (1, \wp_\Lambda(z), \wp_\Lambda'(z)).
 \end{align*}
 This is sometimes referred to as the Weierstrass presentation of $E_\Lambda$.
 
-\textbf{Lead into this in a smarter way.} Another special function of interest is $\zeta_\Lambda$ with $\zeta_\Lambda' = -\wp_\Lambda$.  It takes the form \[\zeta_\Lambda(z) = \frac{1}{z} + \sum_{\omega \in \Lambda \setminus \{0\}} \frac{1}{z - \omega} + \frac{1}{\omega} + \frac{z}{\omega^2}.\]  It is itself the logarithmic derivative of another special function $\sigma_\Lambda$: \[\zeta_\Lambda = \frac{\sigma_\Lambda'}{\sigma_\Lambda} = \frac{d}{dz} \log \sigma_\Lambda,\] and any elliptic function can be written in the form $c \cdot \prod_{i=1}^n \frac{\sigma(z - a_i)}{\sigma(z - b_i)}$.
+There is a second standard embedding of a complex elliptic curve into projective space, using \textit{$\theta$--functions}, which are most naturally expressed \emph{multiplicatively}.  To begin, select a lattice $\Lambda$ and a basis for it, and rescale the lattice so that the basis takes the form $\{1, \tau\}$ with $\tau$ in the upper half-plane.  Then, the normalized exponential function $z \mapsto \exp(2 \pi i z)$ has $1 \cdot \Z$ as its kernel, and setting $q = \exp(2 \pi i \tau)$ we get a second presentation of $E_\Lambda$ as $\C^\times / q^{\Z}$.\todo{I think it's helpful to draw a picture here of an annulus with some identification made.}  \todo{I actually don't think we need this alternative $\theta$--function.  The standard $\theta^{1/2,1/2}_q$ will do fine, as it has the same image under $\delta$.}The $\theta$--function we will consider is defined by \[\tilde \theta_q(u) = (1 - u) \prod_{m \ge 1} (1 - q^m u)(1 - q^m u^{-1}).\]  It visibly has roots of order $1$ at all of the points $q^{\Z}$, but since it has no poles it cannot descend to give a function on $\C^\times / q^{\Z}$.  A different obstruction to this descent is its imperfect periodicity relation: \[\tilde \theta_q(qu) = -u^{-1} \tilde\theta_q(u).\]
 
-With logarithms running around, one might be led to consider the exponential setting.  The normalized exponential function \[\C \xrightarrow{z \mapsto \exp(2 \pi i z)} \C^\times\] already has $\Z$ as its kernel.  Picking a basis for the lattice $\Lambda$, one basis vector can be rescaled to $1$ and the other rescaled basis vector we write as $\tau$.  There is, again, an analytic isomorphism \[E_\Lambda \xrightarrow{z \mapsto \exp(2 \pi i z)} \C^\times / q,\] where $q = \exp(2 \pi i \tau)$ is the image of the other lattice vector.  In fact, $\tau$ can be chosen \textbf{This is just in the upper half-plane, right?} so that $q$ satisfies the norm inequality $0 < |q| < 1$.
+Nonetheless, functions of this sort are still useful.  A somewhat more standard $\theta$--function \[\theta_q(u) = \prod_{m \ge 1} (1 - q^m) (1 + q^{m-\frac{1}{2}}u) (1 + q^{m-\frac{1}{2}}u^{-1}) = \sum_{n \in \Z} u^n q^{\frac{1}{2} n^2}.\]  Its lone zero is at $\exp(2 \pi i (\frac{1}{2} + \frac{\tau}{2}))$, the center of the fundamental annulus, and it satisfies the functional equation \[\theta_q(qu) = u^{-1} q^{\frac{-1}{2}} \theta_q(u),\] and so is a ``twist'' of $\tilde \theta_q$ considered above.  We can also shift the zero-set of $\theta_q$ by rational rescalings $a$ of $q$ and $b$ of $1$: \[\theta_q^{a,b}(z) = e^{\pi i a^2 \tau + 2 \pi i a (z + b)} \theta_\tau(z + a \tau + b).\]
 
+\textbf{This needs to be smoothed out.}
 
+\begin{lemma}
+For any $N > 0$, define $V_\tau[N]$ to be the space of entire functions $f$ with $f(z + N) = f(z)$ and $f(z + \tau) = e^{-2 \pi i N z - \pi i N^2 \tau} f(z)$.  Then, $V_\tau[N]$ has $\C$--dimension $N^2$, and the functions $\theta_\tau^{a, b}$ give a basis by picking representatives $(a_i, b_i)$ of the classes in $((1/N)\Z / \Z)^2$. \qed
+\end{lemma}
 
-
-------
-
-
-Define $\theta$ as \[\theta_\tau(z) = \sum_{n \in \Z} e^{2 \pi i n z + \pi i n^2 \tau}.\]  Then $\theta_\tau(z) = \theta_\tau(-z)$ and \[\theta_\tau(z + a \tau + b) = e^{-\pi i a^2 \tau - 2 \pi i a z} \theta_\tau(z),\] so that $\theta_\tau$ is periodic against $1$ and quasiperiodic against $\tau$.  It has no poles and its lone zero is at $1/2 + \tau/2$, the center of the fundamental parallelogram.  Using this, we define auxiliary $\theta$ functions for each choice of rationals $a$ and $b$: \[\theta_\tau^{a,b}(z) = e^{\pi i a^2 \tau + 2 \pi i a (z + b)} \theta_\tau(z + a \tau + b).\]  For any $N > 0$, we define $V_\tau[N]$ to be the space of entire functions $f$ with $f(z + N) = f(z)$ and $f(z + \tau) = e^{-2 \pi i N z - \pi i N^2 \tau} f(z)$.  Then $V_\tau[N]$ has $\C$--dimension $N^2$ and $\theta_\tau^{a, b}$ give a basis by picking representatives $(a_i, b_i)$ of the classes in $((1/N)\Z / \Z)^2$.  We build a map
+Note that all of these not-quite-periodicity relations will cancel out if we use these functions to form a map to projective space:
 \begin{align*}
 \C / N(\Z \tau + \Z) & \to \P^{N^2-1}(\C), \\
 z & \mapsto [\cdots : \theta_\tau^{a_i, b_i}(z) : \cdots].
 \end{align*}
-For $N > 1$, it is an embedding.
+\begin{theorem}
+For $N > 1$, this map is an embedding. \qed
+\end{theorem}
 
+\begin{example}
 One can work out how it goes for $N = 2$: the four functions there are
 \begin{align*}
 \theta_\tau^{0, 0}(z) & = \theta_\tau(z), & \mathrm{zeroes} & = \frac{\tau + 1}{2} + L_\tau, \\
@@ -165,10 +168,38 @@ B & = \theta_\tau^{0, 1/2}(0) = \sum_n (-1)^n q^{n^2}, &
 C & = \theta_\tau^{1/2, 0}(0) = \sum_n q^{(n + 1/2)^2}
 \end{align*}
 upon which there is the additional ``Jacobi'' relation \[A^4 = B^4 + C^4.\]
+\end{example}
 
-In fact, the second derivative of the logarithm of $\theta_\tau^{1/2, 1/2}$ gives $\wp$, so the logarithmic derivative of $\theta_\tau^{1/2,1/2}$ is the Weierstrass $\zeta$--function.  It follows that $\theta_\tau^{1/2,1/2}$ is ``essentially'' the same as $\sigma$.
+\textbf{Pre-smoothing resumes here.}
 
-What's left to copy over is in sections 10.5-6 of Husemoller's \textit{Elliptic curves}.
+\begin{remark}
+This embedding of $E_\Lambda$ as an intersection of quadratic hypersurfaces in $\CP^3$ is quite different from the Weierstrass embedding.  Nonetheless, the embeddings are analytically related.  Namely, there is an equality \[\frac{d^2}{dz^2} \log \theta_{\exp{2 \pi i \tau}}(\exp{2 \pi i z}) = \wp_\Lambda(z).\]  Separately, Weierstrass considered a function $\sigma_\Lambda$, defined by \[\sigma_\Lambda(z) = z \prod_{\omega \in \Lambda \setminus 0} \left( 1 - \frac{z}{\omega} \right) \cdot \exp \left[ \frac{z}{\omega} + \frac{1}{2} \left( \frac{z}{\omega} \right)^2 \right],\] which also has the property that its second logarithmic derivative is $\wp$.  In fact, any elliptic function can be written in the form \[c \cdot \prod_{i=1}^n \frac{\sigma_\Lambda(z - a_i)}{\sigma_\Lambda(z - b_i)}.\]
+\end{remark}
+
+The $\theta$--functions version of the story has two main successes.  One is that there is a version of this story for an arbitrary abelian variety.  It turns out that all abelian varieties are projective, and the theorems sitting at the heart of this claim are
+\begin{theorem}[Theorem of the cube]\label{TheoremOfTheCube}\citeme{Milne's Abelian Varieties chapter, Theorem 6.1}\todo{This is stated far more generally than we care.}
+Let $U$, $V$, and $W$ be complete varieties over $k$ with base points $u_0 \in U(k)$, $v_0 \in V(k)$, $w_0 \in W(k)$.  An invertible sheaf $\L$ on $U \times V \times W$ is trivial if its restrictions to $\{u_0\} \times V \times W$, $U \times \{v_0\} \times W$, and $U \times V \times \{w_0\}$ are all trivial. \qed
+\end{theorem}
+
+\begin{corollary}\label{Theta3IsTrivial}\citeme{Milne's Abelian Varieties chapter, Corollary 6.4}
+Let $A$ be an abelian variety, let $p_i: A \times A \times A \to A$ be the projection onto the $i${\th} factor, and let $p_{ij} = p_i +_A p_j$, $p_{ijk} = p_i +_A p_j +_A p_k$.  Then for any invertible sheaf $\L$ on $A$, the sheaf \[\Theta^3(\L) := \frac{p_{123}^* \L \otimes p_1^* \L \otimes p_2^* \L \otimes p_3^* \L}{p_{12}^* \L \otimes p_{23}^* \L \otimes p_{31}^* \L}\] on $A \times A \times A$ is trivial.  If $\L$ is rigid, then $\Theta^3(\L)$ is canonically trivialized. \qed
+\end{corollary}
+
+\begin{theorem}[Theorem of the square]\label{TheoremOfTheSquare}\citeme{Theorem of the square?}
+For all invertible sheaves $\L$ on an abelian variety $A$ and points $a, b \in A(k)$, \[\L \otimes t_{a+b}^* \L \cong t_a^* \L \otimes t_b^* \L.\]
+\end{theorem}
+\begin{proof}
+Pull back the sheaf in \Cref{Theta3IsTrivial} along the map \[A \xrightarrow{(\id, a, b)} A \times A \times A\] to get the canonically trivialized sheaf \[\frac{t_{a+b}^* \L \otimes \L \otimes a^* \L \otimes b^* \L}{t_a^* \L \otimes (a+b)^* \L \otimes t_b^* \L}.\]  Cancelling the constant factors gives the theorem.
+\end{proof}
+\noindent However, the proof of projectivity arising from this method rests on choosing an ample line bundle on $A$ and using some generating global sections to embed into $\P(\L^{\oplus n})$.  
+
+
+
+\textbf{Be sure to mention Weil pairings today, as well as $\Theta^3$--structures.}
+
+
+
+The other success of the $\theta$--functions story is that it gives access to a small piece of the compactified moduli of elliptic curves, $\overline{\moduli{ell}}$, called the Tate curve.
 
 
 
@@ -176,8 +207,6 @@ What's left to copy over is in sections 10.5-6 of Husemoller's \textit{Elliptic 
 
 
 -------
-
-Exponentiate and consider the $\theta$--function, as well as its translates.  Note both the projective embedding (which is distinct!) and the relation to Weierstrass's $\zeta$ function.
 
 Every abelian variety is projective.  Remark that this rests on the Theorems of the Cube and of the Square.  In fact, every abelian variety has a theory of $\theta$--functions, which give a particularly nice embedding, associated to a $\Theta^3$--structure on a totally symmetric ample line bundle.  (Say what the Weil pairing is good for: detecting nontrivial $\Theta^3$--structures, at least.)
 
@@ -187,28 +216,9 @@ Analyze the integral Tate curve.
 
 
 
-
-
-\todo{Be sure to mention Weil pairings today as well as $\Theta^k$--structures, since you'll need both tomorrow.}
-
 -------
 
 This is just a list of theorems and ideas, not a coherent lecture.  I guess the point of this lecture is that this material is somewhat ``standard training'' for an algebraic geometer (or, perhaps, any algebraically-inclined graduate student), and so it's not strange for these constructions to be in the front of someone's mind.  This will matter when we start to analyze $kU^{2n}(\CP^\infty)^{\times n}$ and come across familiar constructions all over again.  So, the goal should be to introduce the players in this story in its own context, but to put emphasis on the ``shapes'' of things.
-
-\begin{theorem}[Theorem of the cube]\label{TheoremOfTheCube}\citeme{Milne's Abelian Varieties chapter, Theorem 6.1}\todo{This is stated far more generally than we care.}
-Let $U$, $V$, and $W$ be complete varieties over $k$ with base points $u_0 \in U(k)$, $v_0 \in V(k)$, $w_0 \in W(k)$.  An invertible sheaf $\L$ on $U \times V \times W$ is trivial if its restrictions to $\{u_0\} \times V \times W$, $U \times \{v_0\} \times W$, and $U \times V \times \{w_0\}$ are all trivial. \qed
-\end{theorem}
-
-\begin{corollary}\label{Theta3IsTrivial}\citeme{Milne's Abelian Varieties chapter, Corollary 6.4}
-Let $A$ be an abelian variety, let $p_i: A \times A \times A \to A$ be the projection onto the $i${\th} factor, and let $p_{ij} = p_i +_A p_j$, $p_{ijk} = p_i +_A p_j +_A p_k$.  Then for any invertible sheaf $\L$ on $A$, the sheaf \[\Theta^3(\L) := \frac{p_{123}^* \L \otimes p_1^* \L \otimes p_2^* \L \otimes p_3^* \L}{p_{12}^* \L \otimes p_{23}^* \L \otimes p_{31}^* \L}\] on $A \times A \times A$ is trivial.  If $\L$ is rigid, then $\Theta^3(\L)$ is canonically trivialized. \qed
-\end{corollary}
-
-\begin{theorem}[Theorem of the square]\label{TheoremOfTheSquare}
-For all invertible sheaves $\L$ on an abelian variety $A$ and points $a, b \in A(k)$, \[\L \otimes t_{a+b}^* \L \cong t_a^* \L \otimes t_b^* \L.\]
-\end{theorem}
-\begin{proof}
-Pull back the sheaf in \Cref{Theta3IsTrivial} along the map \[A \xrightarrow{(\id, a, b)} A \times A \times A\] to get the canonically trivialized sheaf \[\frac{t_{a+b}^* \L \otimes \L \otimes a^* \L \otimes b^* \L}{t_a^* \L \otimes (a+b)^* \L \otimes t_b^* \L}.\]  Cancelling the constant factors gives the theorem.
-\end{proof}
 
 \begin{remark}\citeme{Remarks 6.8-9 of Milne's Abelian Varities chapter}
 Fixing $\L$, the assignment \[a \in A(k) \mapsto t_a^* \L \otimes \L^{-1} \in \Pic(A)\] is a homomorphism.  To see this, tensor both sides of \Cref{TheoremOfTheSquare} with $\L^{-2}$.  If we write $D \simeq D'$ for linear equivalence of divisors (i.e., for $\L(D) \cong \L(D')$), then we have \[t_{a+b} D + D = t_a D + t_b D\] and hence for $\sum_{i=1}^n{}^A a_i = 0$ it follows that \[\sum_{i=1}^n t_{a_i} D = nD.\]
